CHANGELOG
--------------------------

ClanSphere 2010.0 >> 2010-XX-XX
___________________________________________________________

-> Added mail notification for every eventguest status change case (hajo)
-> Added mail signature that is added to the end of every mail (hajo)
-> Fixed maintenance mode in some situations (schiri)
-> Fixed template caching in some situations (hajo, schiri)
-> Moved imprint edit link from manage to options (hajo)
-> Reworked xsrf protection (schiri)
-> Removed legacy bxcp update and information (hajo)
-> Updated CKEditor to 3.3.1 (hajo)


ClanSphere 2010.0 beta 1 >> 2010-06-19
___________________________________________________________

-- Recommended PHP version changed to 5.3.2
-- Required PHP version changed to 5.0

-> Added a medals list (duriel)
-> Added mail-function to subscription (spongebob)
-> Added board/navtop2 (spongebob)
-> Added verification for users birthdate (spongebob)
-> Added date to files/navlist (spongebob)
-> Added fightus and joinus to users/navlogin (spongebob)
-> Added automatically jump to the first unread comment of the thread (spongebob)
-> Added notifymods-module (spongebob)
-> Added email-notifications (notifymods-module) to fight us, guestbook, join us, download (spongebob)
-> Added articles/navtop (spongebob)
-> Added delete mirror checkbox to files/edit (spongebob)
-> Added top9 (order) to abcode (spongebob)
-> Added thread author annotation to board/thread (spongebob)
-> Added search for clan names to clans/manage (spongebob)
-> Added usergallery/top (spongebob)
-> Added an admin menu to manage, create and option pages (gahero)
-> Added a user list to the access module for displaying and adding users to an access (gahero)
-> Added and improved many modules icons (gahero)
-> Added replay mirror names addition provided by aschti (hajo)
-> Added possibility to use features.php for print views (hajo)
-> Added charset page to check for possible charset related problems (hajo)