@@ -51,6 +51,12 @@
       </td>
     </tr>
     <tr>
+      <td class="leftc">{icon:kedit} {lang:notice}</td>
+      <td class="leftb">
+        <textarea class="rte_abcode" name="eventguests_notice" cols="50" rows="4">{eventguests:eventguests_notice}</textarea>
+      </td>
+    </tr>
+    <tr>
       <td class="leftc">{icon:status_unknown} {lang:status}</td>
       <td class="leftb">
         <select name="eventguests_status">
@@ -59,12 +65,6 @@
           <option value="4"{select:4}>{lang:status_4}</option>
           <option value="5"{select:5}>{lang:status_5}</option>
         </select>
-      </td>
-    </tr>
-    <tr>
-      <td class="leftc">{icon:kedit} {lang:notice}</td>
-      <td class="leftb">
-        <textarea class="rte_abcode" name="eventguests_notice" cols="50" rows="4">{eventguests:eventguests_notice}</textarea>
       </td>
     </tr>
     <tr>
